crates/ars-components/src/navigation/accordion/snapshots/ars_components__navigation__accordion__tests__accordion_trigger_disabled.snap
---
source: crates/ars-components/src/navigation/accordion/mod.rs
expression: "snapshot_attrs(&api.item_trigger_attrs(&key(\"b\"), false))"
---
aria-controls=accordion-content-s-62
aria-disabled=true
aria-expanded=false
data-ars-disabled=true
data-ars-part=item-trigger
data-ars-scope=accordion
data-ars-state=closed
disabled=true
id=accordion-trigger-s-62
type=button
