crates/ars-components/src/navigation/accordion/snapshots/ars_components__navigation__accordion__tests__accordion_trigger_open.snap
---
source: crates/ars-components/src/navigation/accordion/mod.rs
expression: "snapshot_attrs(&api.item_trigger_attrs(&key(\"a\"), false))"
---
aria-controls=accordion-content-s-61
aria-disabled=true
aria-expanded=true
data-ars-part=item-trigger
data-ars-scope=accordion
data-ars-state=open
id=accordion-trigger-s-61
type=button
